# decky-plugin-template

./: pyproject.toml
nmcli/: main.ipynb
